corrected alignments

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -460,6 +460,7 @@
                 font-size: 24px;
                 line-height: 135%;
                 max-width: 370px;
+                cursor: pointer;
                 @media(max-width: 767px) {
                     max-width: 230px;
                     width: 100%;
@@ -474,6 +475,7 @@
                 padding-left: 50px;
                 padding-right: 50px;
                 select {
+                    max-width: 275px;
                     @media(max-width: 991px) and (min-width: 768px) {
                         max-width: 230px;
                         width: 100%;
@@ -985,6 +987,81 @@
                 }
             }
         }
+    .filter-bar-controls {
+        a, button {
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 157.5%;
+            letter-spacing: 0.045em;
+            text-decoration-line: underline;
+            text-transform: uppercase;
+            color: #231F20;
+        }
+        a {
+            padding: 0.375rem 0.75rem;
+            &:before {
+                content: url(../images/icons/back-arrow.svg);
+                position: absolute;
+                left: -14px;
+                @media(max-width: 767px) {
+                    left: 0;
+                }
+            }
+        }
+        button {
+            background: none;
+            border: none;
+            box-shadow: none;
+            &:focus {
+                color: #231F20;
+            }
+            &:before {
+                content: url(../images/icons/save-icon.svg);
+                position: absolute;
+                left: -20px;
+                top: 8px;
+                @media(max-width: 767px) {
+                    left: -8px;
+                }
+            }
+        }
+    }
+    .filters-section {
+        @media(max-width: 991px) {
+            flex-direction: column;
+            padding: 24px;
+        }
+        background: #F0F2F5;
+        box-shadow: 0px 8px 18px rgba(0, 0, 0, 0.12);
+        border-radius: 10px;
+        padding: 24px 80px;
+        gap: 14px;
+        h2 {
+            font-weight: 700;
+            font-size: 24px;
+            line-height: 36px;
+            letter-spacing: 0.07em;
+            text-transform: uppercase;
+            color: #231F20;
+            text-align: left;
+            &:before {
+                content: url(../images/icons/filter-icon.svg);
+                position: absolute;
+                left: -42px;
+                top: 5px;            
+            }
+        }
+        .filter-select-val {
+            background: #FFFFFF;
+            border: 1px solid rgba(35, 31, 32, 0.1);
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+            color: #231F20;
+            padding: 7px 14px;
+            user-select: none;
+        }
+    }
 }
 .travel-team-modal {
     max-width: 500px;
@@ -1090,6 +1167,9 @@
             box-shadow: none;
             height: 50px;
             resize: none;
+            &:focus {
+                border: 2px solid #FF8E15;
+            }
         }
         select {
             border: 1px solid #D9D9D6;
@@ -1097,6 +1177,10 @@
             outline: none;
             box-shadow: none;
             height: 50px;
+            cursor: pointer; 
+            &:focus {
+                border: 2px solid #FF8E15;
+            }
         }
         a {
             font-weight: 700;
